updated icon and website search description

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="We thrive to make official anime merch, doujin, creative arts more accessible at affordable price in Canada and US"
     />
     <link
       rel="apple-touch-icon"
