--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <script src="https://www.paypal.com/sdk/js?client-id=test&components=buttons"></script>
+    <script src="https://www.paypal.com/sdk/js?client-id=AQ5ROUmiTIzc5wXj1tE38IwoR_UaGIF8-6lEEAwPrTtiDPpTrrcFnWqOjol42hsuvcL7sZHugP9MZQMd&components=buttons"></script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
