--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link
       rel="icon"
-      href="%PUBLIC_URL%/assets/transparent mascot chibi rotated.png"
+      href="/assets/transparent%20mascot%20chibi%20rotated.png"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#0ea5e9" />
@@ -21,13 +21,13 @@
     />
     <link
       rel="apple-touch-icon"
-      href="%PUBLIC_URL%/assets/transparent mascot chibi rotated.png"
+      href="/assets/transparent%20mascot%20chibi%20rotated.png"
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="manifest" href="/manifest.json" />
     <script src="https://www.paypal.com/sdk/js?client-id=AQ5ROUmiTIzc5wXj1tE38IwoR_UaGIF8-6lEEAwPrTtiDPpTrrcFnWqOjol42hsuvcL7sZHugP9MZQMd&components=buttons"></script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
